Created Hero section

--- a/index.html
+++ b/index.html
@@ -19,20 +19,16 @@
       crossorigin="anonymous"
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Shizuru&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="src/style.css" type="text/css" />
-    <title>Portfolio</title>
+    <title>My Portfolio - Esther Esteban</title>
   </head>
   <body>
-    <div class="d-flex bg-primary">
-      <h1>Hello there!</h1>
-      <p>Trying to finish this project</p>
-      <i class="fab fa-instagram" aria-hidden="true"></i>
+    <div class="hero">
+      <h2>Hey! I am</h2>
+      <h1>Esther Esteban</h1>
+      <h3>Front-end developer based in France</h3>
+      <a href="#" class="btn btn-branding">Contact Me</a>
     </div>
+    <i class="fab fa-instagram" aria-hidden="true"></i>
   </body>
 </html>
