Integrated homepage design

--- a/index.html
+++ b/index.html
@@ -24,11 +24,79 @@
   </head>
   <body>
     <div class="hero">
-      <h2>Hey! I am</h2>
+      <h3>Hey! I am</h3>
       <h1>Esther Esteban</h1>
       <h3>Front-end developer based in France</h3>
       <a href="#" class="btn btn-branding">Contact Me</a>
     </div>
-    <i class="fab fa-instagram" aria-hidden="true"></i>
+    <p class="text-center mt-4 mb-5">
+      Some of my best projects can be seen below
+    </p>
+    <div class="container">
+      <div class="row">
+        <div class="col d-none d-sm-block">
+          <img
+            class="img-fluid rounded"
+            src="images/travelAgency.jpg"
+            alt="image of travel agency app"
+          />
+        </div>
+        <div class="col mb-5">
+          <div class="project-description">
+            <h2 class="mb-4">Travel Agency</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Dignissimos provident facilis, corrupti quod expedita consectetur!
+              Asperiores omnis laborum ea laboriosam reprehenderit, obcaecati et
+              voluptatum vel incidunt, aut rerum expedita inventore.
+            </p>
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col mb-5">
+          <div class="project-description">
+            <h2 class="mb-4">Dictionary</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Dignissimos provident facilis, corrupti quod expedita consectetur!
+              Asperiores omnis laborum ea laboriosam reprehenderit, obcaecati et
+              voluptatum vel incidunt, aut rerum expedita inventore.
+            </p>
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+        <div class="col d-none d-sm-block">
+          <img
+            class="img-fluid rounded"
+            src="images/dictionary.JPG"
+            alt="image of dictionary app"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col d-none d-sm-block">
+          <img
+            class="img-fluid rounded"
+            src="images/weather.jpg"
+            alt="image of weather app"
+          />
+        </div>
+        <div class="col mb-5">
+          <div class="project-description">
+            <h2 class="mb-4">Weather App</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Dignissimos provident facilis, corrupti quod expedita consectetur!
+              Asperiores omnis laborum ea laboriosam reprehenderit, obcaecati et
+              voluptatum vel incidunt, aut rerum expedita inventore.
+            </p>
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer><i class="fab fa-instagram" aria-hidden="true"></i></footer>
   </body>
 </html>
