Added spacing in Home and removed it from About

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row mt-5">
         <div class="col mb-5">
           <div class="project-description">
             <h2 class="mb-4">Dictionary</h2>
@@ -75,7 +75,7 @@
           />
         </div>
       </div>
-      <div class="row">
+      <div class="row mt-5">
         <div class="col d-none d-sm-block">
           <img
             class="img-fluid rounded"
