Added navbar to all pages

--- a/about.html
+++ b/about.html
@@ -23,6 +23,31 @@
     <title>About Me - Esther Esteban</title>
   </head>
   <body>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="/">Esther Esteban</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="/index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">About</a>
+            <a class="nav-link" href="/projects.html">Work</a>
+            <a class="nav-link" href="/contact.html">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
     <div class="about-hero">
       <div class="container">
         <div class="row">
@@ -35,7 +60,9 @@
                 is the way to go! You will have to try your brand new learned
                 skills into homework projects.
               </p>
-              <a href="" class="btn btn-branding-outline">See my projects</a>
+              <a href="/projects.html" class="btn btn-branding-outline"
+                >See my projects</a
+              >
             </div>
           </div>
           <div class="col-lg-6">
