--- a/index.html
+++ b/index.html
@@ -23,11 +23,36 @@
     <title>My Portfolio - Esther Esteban</title>
   </head>
   <body>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="/">Esther Esteban</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/projects.html">Work</a>
+            <a class="nav-link" href="/contact.html">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
     <div class="hero">
       <h3>Hey! I am</h3>
       <h1>Esther Esteban</h1>
       <h3>Front-end developer based in France</h3>
-      <a href="#" class="btn btn-branding">Contact Me</a>
+      <a href="/contact.html" class="btn btn-branding">Contact Me</a>
     </div>
     <p class="text-center mt-4 mb-5">
       Some of my best projects can be seen below
@@ -50,7 +75,9 @@
               Asperiores omnis laborum ea laboriosam reprehenderit, obcaecati et
               voluptatum vel incidunt, aut rerum expedita inventore.
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="/projects.html" class="btn btn-branding-outline"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
@@ -64,7 +91,9 @@
               Asperiores omnis laborum ea laboriosam reprehenderit, obcaecati et
               voluptatum vel incidunt, aut rerum expedita inventore.
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="/projects.html" class="btn btn-branding-outline"
+              >Learn more</a
+            >
           </div>
         </div>
         <div class="col d-none d-sm-block">
@@ -92,7 +121,9 @@
               Asperiores omnis laborum ea laboriosam reprehenderit, obcaecati et
               voluptatum vel incidunt, aut rerum expedita inventore.
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="/projects.html" class="btn btn-branding-outline"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
