--- a/contact.html
+++ b/contact.html
@@ -23,39 +23,47 @@
     <title>Contact Me - Esther Esteban</title>
   </head>
   <body>
-   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
       <div class="container">
-          <a class="navbar-brand" href="/">Esther Esteban</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link"  href="/index.html">Home</a>
-              <a class="nav-link" href="/about.html">About</a>
-              <a class="nav-link" href="/projects.html">Work</a>
-              <a class="nav-link active" aria-current="page" href="/">Contact</a>
-            </div>
+        <a class="navbar-brand" href="/">Esther Esteban</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="/index.html">Home</a>
+            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/projects.html">Work</a>
+            <a class="nav-link active" aria-current="page" href="/">Contact</a>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
     <div class="project-container container">
       <div class="about-content">
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <p>
-            <a href="mailto:estheresteban86@gmail.com">estheresteban86@gmail.com</a></a></p>
+          <a href="mailto:estheresteban86@gmail.com"
+            >estheresteban86@gmail.com</a
+          >
+        </p>
         <h3 class="mt-4">LinkedIn</h3>
         <p>
-            <a href="https://www.linkedin.com/in/esther-esteban-mart%C3%ADn-71a629a6" target="_black">@Esther Esteban Martin</a></p>
+          <a
+            href="https://www.linkedin.com/in/esther-esteban-mart%C3%ADn-71a629a6"
+            target="_black"
+            >@Esther Esteban Martin</a
+          >
+        </p>
       </div>
     </div>
   </body>
