--- a/index.html
+++ b/index.html
@@ -127,7 +127,38 @@
           </div>
         </div>
       </div>
+      <footer class="mt-4">
+        <div class="contact-box mb-5 d-flex justify-content-between">
+          <div>
+            <h4 class="mt-2">Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding">Contact Me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-4">
+          <a href="mailto:estheresteban86@gmail.com" class="email-link"
+            >estheresteban86@gmail.com</a
+          >
+        </div>
+        <div class="d-flex justify-content-center social-links mb-3">
+          <a
+            href="https://www.linkedin.com/in/esther-esteban-mart%C3%ADn-71a629a6"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin-in"></i
+          ></a>
+          <a
+            href="https://github.com/EstherEMMG?tab=repositories"
+            target="_blank"
+          >
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="https://www.facebook.com/estiur.esteban" target="_blank">
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+      </footer>
     </div>
-    <footer><i class="fab fa-instagram" aria-hidden="true"></i></footer>
   </body>
 </html>
