Made website SEO friendly.

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,10 @@
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" type="text/css" />
+    <meta
+      name="description"
+      content="Different ways to get in contact with Esther."
+    />
     <title>Contact Me - Esther Esteban</title>
   </head>
   <body>
@@ -39,10 +43,23 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="/index.html">Home</a>
-            <a class="nav-link" href="/about.html">About</a>
-            <a class="nav-link" href="/projects.html">Work</a>
-            <a class="nav-link active" aria-current="page" href="/">Contact</a>
+            <a class="nav-link" href="/index.html" title="Homepage">Home</a>
+            <a class="nav-link" href="/about.html" title="About Esther"
+              >About</a
+            >
+            <a
+              class="nav-link"
+              href="/projects.html"
+              title="About Esther's work"
+              >Work</a
+            >
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="/"
+              title="Esther's contact info"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -60,11 +77,27 @@
         <p>
           <a
             href="https://www.linkedin.com/in/esther-esteban-mart%C3%ADn-71a629a6"
-            target="_black"
+            target="_blank"
             >@Esther Esteban Martin</a
           >
         </p>
+        <h3 class="mt-4">Facebook</h3>
+        <p>
+          <a href="https://www.facebook.com/estiur.esteban" target="_blank"
+            >Esther Esteban</a
+          >
+        </p>
       </div>
+      <footer class="mt-5">
+        <div>
+          <p class="text-center">
+            This project was developed by Esther Esteban and it is
+            <a href="https://github.com/EstherEMMG/Portfolio" target="_blank"
+              >open-source</a
+            >.
+          </p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
