--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,10 @@
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" type="text/css" />
+    <meta
+      name="description"
+      content="Here are some of the projects Esther has been working on since she started studying coding."
+    />
     <title>My Projects - Esther Esteban</title>
   </head>
   <body>
@@ -39,10 +43,23 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="/index.html">Home</a>
-            <a class="nav-link" href="/about.html">About</a>
-            <a class="nav-link active" aria-current="page" href="/">Work</a>
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" href="/index.html" title="Homepage">Home</a>
+            <a class="nav-link" href="/about.html" title="About Esther"
+              >About</a
+            >
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="/"
+              title="About Esther's work"
+              >Work</a
+            >
+            <a
+              class="nav-link"
+              href="/contact.html"
+              title="Esther's contact info"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -54,19 +71,31 @@
         <h3 class="mb-5 text-center">Esther Esteban</h3>
         <div class="row mt-4">
           <div class="col-md-6 mb-3">
-            <img src="images/dictionary.JPG" class="img-fluid" alt="" />
+            <img
+              src="images/dictionary.JPG"
+              class="img-fluid"
+              alt="Image of the dictionary"
+            />
             <h3 class="text-center">Dictionary App</h3>
             <p class="text-center text-muted">Build with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-3">
-            <img src="images/travelAgency.JPG" class="img-fluid" alt="" />
+            <img
+              src="images/travelAgency.JPG"
+              class="img-fluid"
+              alt="Image of the travel agency app"
+            />
             <h3 class="text-center">Travel Agency</h3>
             <p class="text-center text-muted">Build with HTML and CSS</p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6 mb-3">
-            <img src="images/weather.JPG" class="img-fluid" alt="" />
+            <img
+              src="images/weather.JPG"
+              class="img-fluid"
+              alt="Image of the weather App"
+            />
             <h3 class="text-center">Weather App</h3>
             <p class="text-center text-muted">Build with HTML, CSS and React</p>
           </div>
@@ -91,7 +120,7 @@
               >estheresteban86@gmail.com</a
             >
           </div>
-          <div class="d-flex justify-content-center social-links mb-3">
+          <div class="d-flex justify-content-center social-links mb-5">
             <a
               href="https://www.linkedin.com/in/esther-esteban-mart%C3%ADn-71a629a6"
               target="_blank"
@@ -106,6 +135,14 @@
             <a href="https://www.facebook.com/estiur.esteban" target="_blank">
               <i class="fa-brands fa-facebook"></i>
             </a>
+          </div>
+          <div>
+            <p class="text-center">
+              This project was developed by Esther Esteban and it is
+              <a href="https://github.com/EstherEMMG/Portfolio" target="_blank"
+                >open-source</a
+              >.
+            </p>
           </div>
         </footer>
       </div>
