--- a/about.html
+++ b/about.html
@@ -20,6 +20,10 @@
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" type="text/css" />
+    <meta
+      name="description"
+      content="Some background. Where did Esther studied and her career change."
+    />
     <title>About Me - Esther Esteban</title>
   </head>
   <body>
@@ -39,10 +43,26 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="/index.html">Home</a>
-            <a class="nav-link active" aria-current="page" href="/">About</a>
-            <a class="nav-link" href="/projects.html">Work</a>
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" href="/index.html" title="Homepage">Home</a>
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="/"
+              title="About Esther"
+              >About</a
+            >
+            <a
+              class="nav-link"
+              href="/projects.html"
+              title="About Esther's work"
+              >Work</a
+            >
+            <a
+              class="nav-link"
+              href="/contact.html"
+              title="Esther's contact info"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -88,7 +108,7 @@
               >estheresteban86@gmail.com</a
             >
           </div>
-          <div class="d-flex justify-content-center social-links mb-3">
+          <div class="d-flex justify-content-center social-links mb-5">
             <a
               href="https://www.linkedin.com/in/esther-esteban-mart%C3%ADn-71a629a6"
               target="_blank"
@@ -103,6 +123,14 @@
             <a href="https://www.facebook.com/estiur.esteban" target="_blank">
               <i class="fa-brands fa-facebook"></i>
             </a>
+          </div>
+          <div>
+            <p class="text-center">
+              This project was developed by Esther Esteban and it is
+              <a href="https://github.com/EstherEMMG/Portfolio" target="_blank"
+                >open-source</a
+              >.
+            </p>
           </div>
         </footer>
       </div>
