--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" type="text/css" />
+    <meta
+      name="description"
+      content="Esther is a front-end engineer based in France."
+    />
     <title>My Portfolio - Esther Esteban</title>
   </head>
   <body>
@@ -39,10 +43,28 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
-            <a class="nav-link" href="/about.html">About</a>
-            <a class="nav-link" href="/projects.html">Work</a>
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="/"
+              title="Homepage"
+              >Home</a
+            >
+            <a class="nav-link" href="/about.html" title="About Esther"
+              >About</a
+            >
+            <a
+              class="nav-link"
+              href="/projects.html"
+              title="About Esther's work"
+              >Work</a
+            >
+            <a
+              class="nav-link"
+              href="/contact.html"
+              title="Esther's contact info"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -142,7 +164,7 @@
             >estheresteban86@gmail.com</a
           >
         </div>
-        <div class="d-flex justify-content-center social-links mb-3">
+        <div class="d-flex justify-content-center social-links mb-5">
           <a
             href="https://www.linkedin.com/in/esther-esteban-mart%C3%ADn-71a629a6"
             target="_blank"
@@ -157,6 +179,14 @@
           <a href="https://www.facebook.com/estiur.esteban" target="_blank">
             <i class="fa-brands fa-facebook"></i>
           </a>
+        </div>
+        <div>
+          <p class="text-center">
+            This project was developed by Esther Esteban and it is
+            <a href="https://github.com/EstherEMMG/Portfolio" target="_blank"
+              >open-source</a
+            >.
+          </p>
         </div>
       </footer>
     </div>
